# terminal_hud

./: README.md  environment.yml  pyproject.toml
terminal_hud/: __init__.py  __main__.py  cli.py  colors.py  hud.py  stats.py
terminal_hud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
